--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ PORT=4000
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:P@ssw0rd@localhost:3306/booking_room"
+DATABASE_URL="mysql://root:P@ssw0rd@localhost:3306/booking_room2"
